--- a/styles.css
+++ b/styles.css
@@ -3,31 +3,47 @@
     padding: 0;
 }
 
+body{
+    background-color: #797979;
+}
+
+img{
+    border-bottom-left-radius: 15%;
+}
+
 
 #navbar{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 75px;
     background-color: #E82020;
+    border-bottom-left-radius: 15%;
+    border-bottom-right-radius: 20px;
 }
 
 #nav-list{
     display: flex;
     list-style: none;
-    text-decoration: underline;
+}
+
+#nav-link{
+    text-decoration: none;
 }
 
 #nav-list li{
-    padding-top: 15px;
-    padding-right: 2rem;;
+    font-size: 1.25rem;
+    color: black;
+    padding-top: 25px;
+    padding-right: 2rem;
 }
 
 #navbar h2{
-    justify-self: center;
-    padding-top: 15px;
-    margin-left: 20rem;
+font-size: 250%;
+margin-top: 10px;
+margin-right: 50px;
 }
+
