--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,8 @@ margin-right: 50px;
 }
 
 
+/*use grid to make paragraph a column on the left side with a black background*/
+
 #about-rt{
    margin-top: 5%;
 }
