--- a/styles.css
+++ b/styles.css
@@ -53,22 +53,26 @@ margin-right: 50px;
 }
 
 
-/*use grid to make paragraph a column on the left side with a black background*/
+
 
 #about-rt{
    margin-top: 5%;
 }
 
-#about-rt p{
+
+#rt-description{
     display: grid;
     grid-template-columns: minmax(2rem, 1fr)  minmax(2rem, 1fr);
     row-gap: 3rem;
-    font-size: 18px;
-    color: azure;
-   
+    margin-left: 5%;
 }
 
-#rt-description{
-    
-   background: black;
+#rt-description p{
+    font-size: 18px;
+    color: azure;
+    background: black;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 4px;
+    width: 500px;
+    padding: 2%;
 }
