attempt to clean up mobile view

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 
 body{
     background-color: #797979;
+    width: 100vw;
+    height: 100vh;
 }
 
 h3 {
@@ -12,6 +14,44 @@ h3 {
     text-align: center;
     text-decoration: underline;
   }
+
+
+  /*Start of attempt to look better on mobile*/
+
+  img{
+    max-width: 100%;
+  }
+
+
+  @media (min-width: 600px) {
+    .column {
+      width: 50%;
+    }
+  }
+
+
+
+  @media screen and (max-width: 600px) {
+    .left, .main, .right {
+      width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+    }
+  }
+
+
+  @media (min-width: 600px) {
+    body {
+      flex-wrap: nowrap;
+    }
+
+    div {
+      flex-basis: 33%;
+    }
+  }
+
+
+  /*End of attempt to make it look better on mobile*/
+
+
 
   #nav-logo{
     border-bottom-left-radius: 15%;
